# gpt2-from-scratch

./: README.md  main.py  pyproject.toml
